Elements no longer jumping around during page load

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -236,6 +236,10 @@ textarea, select:focus {
   visibility: hidden;
 }
 
+.visible{
+  visibility: visible;
+}
+
 .absolute{
   position: absolute;
 }
